--- a/app/Resources/translations/messages.jp.yml
+++ b/app/Resources/translations/messages.jp.yml
@@ -185,3 +185,17 @@ cant_modify_current_user_in_admin: null
 hours: 時間
 access_denied: 访问被拒绝
 'locale invalid': null
+历史公告: 履歴のお知らせ
+服务条款: 利用規約
+支持: サポート
+关于Vmoex : Vmoexについて
+member_oneline_count : オンラインのメンバー
+visitor : 訪問者
+person : 人
+其他 : その他
+电影 : 映画
+番剧 : アニメシリーズ
+灌水 : 雑談
+更多 : もっと or さらに
+最新发布 : 最新の投稿
+最新评论 : 最新のコメント
