--- a/app/Resources/translations/messages.zh_CN.yml
+++ b/app/Resources/translations/messages.zh_CN.yml
@@ -187,3 +187,17 @@ locale_invalid: 非法的语言
 hours: 小时
 access_denied: 访问被拒绝
 'locale invalid': 未知的语言
+历史公告: 历史公告
+服务条款: 服务条款
+支持: 支持
+关于Vmoex : 关于Vmoex
+member_oneline_count : 会员在线
+visitor : 游客
+person : 人
+其他 : 其他
+电影 : 电影
+番剧 : 番剧
+灌水 : 灌水
+更多 : 更多
+最新发布 : 最新发布
+最新评论 : 最新评论
