--- a/app/Resources/translations/messages.en.yml
+++ b/app/Resources/translations/messages.en.yml
@@ -37,7 +37,6 @@ newly.comments: 'Latest Comments '
 today.activity: 'Today Activity'
 'continuous_signed count day': 'continuous signed count day'
 create_new_topic: 'Create New Topic'
-wpcast_available_with: 'wpcast available with: '
 当前在线count人: 'Current Online count Users'
 历史最高: 'The highest in history'
 致谢: Thanks
@@ -60,7 +59,7 @@ buy_beer: 'Buy Me '
 个人设置: Setting
 verify_email: 'Your Email is not activated，<a href="javascript:" class="alert-link">Click to Activate</a>'
 添加新的评论: 'Add new Comment'
-发表有颜色的评论将消耗5金币哦: 'A color comment will consume 5 gold coins.'
+发表有颜色的评论: 'Posting a colored comment will cost 1 coin.'
 好可怕，速度太快了: 'It''s awful, the speed is too fast'
 关于作者: 'the author'
 拉黑: Block
@@ -135,15 +134,12 @@ site_since: 'Community establishment time'
 site_post_count: 'Number of topics'
 site_comment_count: 'Reply quantity'
 site_user_count: 'Number of registered users'
-site_copyright: '2018 Vmoex - Create the Best Secondary Community'
+site_copyright: '@2024 Vmoex - Create the Best Secondary Community'
 site_title: 'Vmoex - Create the Best Secondary Community'
 site_name: Vmoex
+site_domain: null
 user_place_in_site: 'the count''st Vmoex member'
 footer_available_with: 'available with: '
-yingwe: ds
-sds: dsd
-kdssd: dsd
-dsdsd: sdsds
 user_my_messages: 'My Messages'
 user_my_received_messages: Received
 user_my_sent_messages: Send
