--- a/app/Resources/translations/messages.zh_TW.yml
+++ b/app/Resources/translations/messages.zh_TW.yml
@@ -53,7 +53,7 @@ buy_beer: 請彩虹之戀喝
 个人设置: 個人設置
 verify_email: '你的郵箱尚未啟動，<a href="javascript:" class="alert-link">點此啟動</a>'
 添加新的评论: 添加新的評論
-发表有颜色的评论将消耗5金币哦: 發表有顏色的評論將消耗5金幣哦
+发表有颜色的评论: 發表有顏色的評論將消耗1金幣哦
 好可怕，速度太快了: 好可怕，速度太快了
 关于作者: 關於作者
 拉黑: 拉黑
@@ -87,11 +87,10 @@ support: Support
 vmoex_description: null
 刷新: null
 trends_description: null
-blind.chat: 聊聊
+blind.chat: 瞎聊
 comment: 評論
 today.activity: 今日活躍度
 'continuous_signed count day': 已連續簽到count天
-wpcast_available_with: Wpcast可用於：
 追剧: 'y'
 在线可撩: 線上可撩
 添加: null
@@ -135,15 +134,12 @@ site_since: 社區成立時間
 site_post_count: 主題數量
 site_comment_count: 回復數量
 site_user_count: 注册用户数量
-site_copyright: '@2018 Vmoex -打造最美好的二次元社區'
+site_copyright: '@2024 Vmoex -打造最美好的二次元社區'
 site_title: 'Vmoex -打造最美好的二次元社區'
 site_name: Vmoex
+site_domain: null
 user_place_in_site: 第count比特Vmoex用戶
 footer_available_with: 可用於：
-yingwe: dsd
-sds: ssdsdsd
-kdssd: dsdsd
-dsdsd: sdsdsds
 user_my_messages: 我的私信
 user_my_received_messages: 我接收的
 user_my_sent_messages: 我發出的
