--- a/app/Resources/translations/messages.en.yml
+++ b/app/Resources/translations/messages.en.yml
@@ -14,7 +14,7 @@ logout: Logout
 register: 'Register '
 success: success
 fail: fail
-vmoex_slogan: 'Build the best two yuan community'
+vmoex_slogan: 'A Hub of Knowledge and Interests'
 vmoex_description: 'Vmoex is inspired by the V2EX creative workers community, and most of the V2EX is the Internet/IT topic, so Vmoex hopes for anime, two, and Opera (and Meng''s [w Omega]) enthusiasts to join, share, discover, and create more beauty in life.'
 刷新: refresh
 banner.copyright: 'The content of this site may be infringed on your rights, Vmoex use your articles (or pictures, etc.) only for testing the real line, if you do not allow, please mail: support@vmoex.com.'
@@ -126,7 +126,7 @@ notice_replied_you: 'Reply to me'
 post_top: Top
 like: Fabulous
 action_too_fast: 'Terrible. It''s too fast.'
-banner_announce: 'Welcome to Vmoex, this is a secondary exchange community, I look forward to your becoming a member here!'
+banner_announce: 'Welcome to Vmoex, a hub of knowledge and interests. We're excited to have you join us!'
 all: whole
 hot: Hot
 site_state: 'Community Operational Status'
@@ -134,7 +134,7 @@ site_since: 'Community establishment time'
 site_post_count: 'Number of topics'
 site_comment_count: 'Reply quantity'
 site_user_count: 'Number of registered users'
-site_copyright: '@2024 Vmoex - Create the Best Secondary Community'
+site_copyright: '@2024 Vmoex - A Hub of Knowledge and Interests'
 site_title: 'Vmoex - Create the Best Secondary Community'
 site_name: Vmoex
 user_place_in_site: 'the count''st Vmoex member'
