--- a/app/Resources/translations/messages.en.yml
+++ b/app/Resources/translations/messages.en.yml
@@ -126,7 +126,7 @@ notice_replied_you: 'Reply to me'
 post_top: Top
 like: Fabulous
 action_too_fast: 'Terrible. It''s too fast.'
-banner_announce: 'Welcome to Vmoex, a hub of knowledge and interests. We're excited to have you join us!'
+banner_announce: Welcome to Vmoex, a hub of knowledge and interests. We're excited to have you join us!
 all: whole
 hot: Hot
 site_state: 'Community Operational Status'
