--- a/app/Resources/translations/messages.jp.yml
+++ b/app/Resources/translations/messages.jp.yml
@@ -1,6 +1,6 @@
 about_site: 'について Vmoex'
 click: クリック
-banner.copyright: このウェブサイトの内容はあなたの権益を侵害した可能性がありますが、現在Vmexがあなたの文章（または画像など）を使用して、真実の上線の状況をテストするために使用されます。
+banner.copyright: このウェブサイトの内容はあなたの権益を侵害した可能性がありますが、現在Vmoexがあなたの文章（または画像など）を使用して、真実の上線の状況をテストするために使用されます。
 chinese: 中国語の簡体字
 english: 英語
 chinese.tw: 繁体中国語
@@ -20,7 +20,7 @@ vmoex_slogan: 知識と興味の集まる場所
 添加: 追加
 请先登录: 先に登録してください
 trends_description: このプレートは、あなたが注目しているユーザー、プレート、またはテーマを展示するために使用されています。
-blind_description: 「雑談」は、Vmexコミュニティで提供されたオンライン即時チャットの機能であり、「雑談」を送るごとに金貨1枚が消費される。
+blind_description: 「雑談」は、Vmoexコミュニティで提供されたオンライン即時チャットの機能であり、「雑談」を送るごとに金貨1枚が消費される。
 search: 検索
 about: について
 messages: 私信
@@ -28,9 +28,9 @@ notifications: 通知する
 trends: 傾向
 blind.chat: 雑談
 板块: のプレート
-Vmoex当前板块数量: Vmex現在のプレートの数
+Vmoex当前板块数量: Vmoex現在のプレートの数
 hello_stranger: こんにちは、知らない人
-hello_stranger_detail: もしあなたがVmexが好きなら、登録や保存サイトを覚えてください。
+hello_stranger_detail: もしあなたがVmoexが好きなら、登録や保存サイトを覚えてください。
 my.status: 私の状態
 hot.users: 活躍するユーザー
 today.hot.topics: 本日の活躍
@@ -74,7 +74,7 @@ verify_email: 'あなたのメールはまだ活性化されていません。<a
 个新的粉丝: 新しいファン
 在线可撩: 線上可撩
 加入于: に加える
-第count位Vmoex用户: count位Vmexユーザー
+第count位Vmoex用户: count位Vmoexユーザー
 最后在线时间：time: 最後のオンライン時間：time
 name发布的帖子: nameの招待状
 name的回复: nameの返事
