--- a/app/Resources/translations/messages.jp.yml
+++ b/app/Resources/translations/messages.jp.yml
@@ -134,7 +134,7 @@ site_since: コミュニティの成立時間
 site_post_count: テーマの数
 site_comment_count: 回答数
 site_user_count: 登録ユーザーの数
-site_copyright: @2024 Vmoex -知識と興味の集まる場所
+site_copyright: '@2024 Vmoex -知識と興味の集まる場所'
 site_title: Vmoex -知識と興味の集まる場所
 site_name: Vmoex
 user_place_in_site: Cunt位Wpcrftユーザー
