--- a/app/Resources/translations/messages.jp.yml
+++ b/app/Resources/translations/messages.jp.yml
@@ -1,9 +1,7 @@
-about_site: 'について Vmoex'
-click: クリック
-banner.copyright: このウェブサイトの内容はあなたの権益を侵害した可能性がありますが、現在Vmoexがあなたの文章（または画像など）を使用して、真実の上線の状況をテストするために使用されます。
-chinese: 中国語の簡体字
+about_site: 'Vmoexについて'
+chinese: 簡体字中国語
 english: 英語
-chinese.tw: 繁体中国語
+chinese.tw: 繁体字中国語
 japanese: 日本語
 ago: 前
 second: 秒
@@ -11,186 +9,192 @@ day: 日
 hour: 時間
 minute: 分
 login: ログイン
-logout: 出てくる
+logout: ログアウト
 register: 登録
-success: 操作が成功する
-fail: 操作に失敗する
-comment: 評論
-vmoex_slogan: 知識と興味の集まる場所
-添加: 追加
-请先登录: 先に登録してください
-trends_description: このプレートは、あなたが注目しているユーザー、プレート、またはテーマを展示するために使用されています。
-blind_description: 「雑談」は、Vmoexコミュニティで提供されたオンライン即時チャットの機能であり、「雑談」を送るごとに金貨1枚が消費される。
+success: 操作が成功しました
+fail: 操作が失敗しました
+click: クリック
+nav_messages: すべてのメッセージを表示
+nav_new_fans: 新しいフォロワー
+nav_all_notifications: すべての通知を表示
+nav_user_home: マイページ
+nav_user_setting: 設定
+footer_online_user_count: 現在オンライン中のcount人
+footer_oneline_user_most: 最高記録
+trends: 動向
+blind.chat: チャット
 search: 検索
 about: について
-messages: 私信
-notifications: 通知する
-trends: 傾向
-blind.chat: 雑談
-板块: のプレート
-Vmoex当前板块数量: Vmoex現在のプレートの数
-hello_stranger: こんにちは、知らない人
-hello_stranger_detail: もしあなたがVmoexが好きなら、登録や保存サイトを覚えてください。
-my.status: 私の状態
-hot.users: 活躍するユーザー
-today.hot.topics: 本日の活躍
-newly.comments: 最新のコメント
-activity: 活発度
-create_new_topic: 新しいテーマを作成
-today.activity: 今日活躍度
-'continuous_signed count day': 已連續簽到count天
-全部: すべて
-热门: 人気
-福利: 福祉
-插画: イラスト
-歌姬: 歌姫
-游戏: ゲーム
-站务公告: 駅務公告
-漫展: 展示する
-当前在线count人: count人のオンラインオンライン
-历史最高: 歴史が最も高い
-致谢: お礼を言う
-buy_beer: 虹の恋にビールを飲
+messages: メッセージ
+notifications: 通知
+comment: コメント
+hello_stranger: 'こんにちは、初めまして！'
+hello_stranger_detail: Vmoexが気に入ったら、登録するかブックマークしてくださいね~
+my.status: 自分の状態
+hot.users: 活発なユーザー
+today.hot.topics: 今日の人気トピック
+newly.comments: 最新コメント
+today.activity: 今日のアクティビティ
+'continuous_signed count day': 連続サインインcount日目
+create_new_topic: 新しいトピックを作成
+activity: アクティビティ
 用户名: ユーザー名
-邮箱: 郵便ポスト
+邮箱: メールアドレス
 密码: パスワード
-查看所有通知: すべての通知を調べる
-查看所有私信: 查看所有私信
-我的主页: 私のホームページ
+verify_email: 'メールアドレスが未認証です、<a data-pjax href="/user/setting#emailSetting" class="alert-link">ここをクリックして認証</a>'
+在线可撩: オンライン中
+加入于: 参加日
+第count位Vmoex用户: Vmoexの第count位のユーザー
+最后在线时间：time: 最終オンライン時間：time
+name发布的帖子: nameの投稿
+name的回复: nameの返信
+'time 发表在': 'timeに投稿'
+name的关注: nameのフォロー
+name的粉丝: nameのフォロワー
+发送成功: 送信に成功しました
+documents: 文書
+support: サポート
+刷新: 更新
+板块: セクション
+当前在线count人: 現在オンラインのcount人
+历史最高: 最高記録
+全部: 全て
+热门: 人気
+查看所有通知: すべての通知を表示
+查看所有私信: すべてのメッセージを表示
 个人设置: 個人設定
-verify_email: 'あなたのメールはまだ活性化されていません。<a href="javascript:" class="alert-link">ここでアクティブにする</a>'
 添加新的评论: 新しいコメントを追加
-发表有颜色的评论: カラーコメントを投稿すると、1コインが消費されます。
-好可怕，速度太快了: 怖い、スピードが速い
-关于作者: 作者
-拉黑: ラブラック
+发表有颜色的评论: カラフルなコメントを投稿するには1ゴールドを消費します
+好可怕，速度太快了: 速すぎて怖い！
+关于作者: 著者について
+拉黑: ブロック
 昵称: ニックネーム
 状态: 状態
-头像: 頭像
+头像: アイコン
 保存: 保存
 修改: 修正
-修改密码: パスワードを修正
-支持我们: 私たちを応援する
-个新的粉丝: 新しいファン
-在线可撩: 線上可撩
-加入于: に加える
-第count位Vmoex用户: count位Vmoexユーザー
-最后在线时间：time: 最後のオンライン時間：time
-name发布的帖子: nameの招待状
-name的回复: nameの返事
-'time 发表在': timeが発表している
-name的关注: nameの注目
-name的粉丝: nameのファン
-发送成功: 成功を送る
-赞: 賛
-社区运行状态: コミュニティの運行状態
-社区成立时间: コミュニティの成立時間
-主题数量: テーマの数
-回复数量: 回答数
-注册用户数量: 登録ユーザーの数
-documents: 文档
-support: Support
-vmoex_description: null
-刷新: null
-追剧: null
-什么是瞎聊: null
-nav_messages: すべての私信を調べる
-nav_new_fans: 新しいファン
-nav_all_notifications: すべての通知を調べる
-nav_user_home: 個人の中心
-nav_user_setting: 個人設定
-footer_online_user_count: 現在のオンラインcount人
-footer_oneline_user_most: 歴史が最も高い
-wpcast_slogan: 9秒で自分のブログを作ります
-vmoex_available_with: ''
-userhome_send_message: 私信を送る
-userhome_has_followed: すでに注目している
-userhome_follow: 関心を持つ
-userhome_block: シールド
-userhome_no_recent_reply: このユーザーは最近返事がない
-userhome_he_is_cold: 比較的に寒いですか？今は誰にも注目していません。
-userhome_he_has_no_follower: 評判が悪くて、何のファンもいない
+修改密码: パスワードを変更
+支持我们: サポート
+个新的粉丝: 新しいフォロワー
+赞: いいね
+什么是瞎聊: 雑談
+blind_description: 「雑談」はVmoexコミュニティが提供するリアルタイムチャット機能で、メッセージを送信するたびに1ゴールドを消費します。
+社区运行状态: コミュニティの運営状態
+社区成立时间: コミュニティ設立日
+主题数量: トピック数
+回复数量: 返信数
+注册用户数量: 登録ユーザー数
+添加: 追加
+请先登录: 先にログインしてください
+Vmoex当前板块数量: Vmoex現在のセクション数
+userhome_send_message: メッセージを送信
+userhome_has_followed: フォロー済み
+userhome_follow: フォロー
+userhome_block: ブロック
+userhome_no_recent_reply: このユーザーには最近の返信がありません
+userhome_he_is_cold: 'クールですか？まだ誰もフォローしていません。'
+userhome_he_has_no_follower: 人気がないようです。フォロワーがいません╮(╯_╰)╭
 post_add_comment: コメントを追加
-post_no_comment: 文章にはコメントがない
-chat_sorry_co_content: 申し訳ございませんが、しばらくチャットがありません。
+post_no_comment: コメントはありません
+chat_sorry_co_content: 申し訳ありませんが、現在チャットメッセージはありません
 chat_please_type: 入力してください
-send: 送信する
+send: 送信
 please_login: ログインしてください
-why_this: どうしてそうなるの？
-userhome_no_published_post: ユーザーは現在、文章を発表していません。
-reply: 返事をする
-notice_my_notice: 私の知らせ
-notice_unread: 未読の通知
-notice_read: 既読の通知
-notice_replied_you: 私に返事する
-post_top: 棚を置く
-like: 称賛する
-action_too_fast: 怖い、スピードが速い
-banner_announce: Vmoexへようこそ！ここは知識と興味の集まる場所です。あなたがここで一員になることを楽しみにしています
-all: すべて
+why_this: なぜこうなったの？
+userhome_no_published_post: ユーザーはまだ記事を投稿していません
+reply: 返信
+notice_my_notice: マイ通知
+notice_unread: 未読通知
+notice_read: 読んだ通知
+notice_replied_you: 返信がありました
+post_top: トップに固定
+like: いいね
+action_too_fast: 速すぎて怖い！
+banner_announce: Vmoexへようこそ。ここは知識と興味の集まる場所です。あなたがここに参加するのを楽しみにしています！
+all: 全部
 hot: 人気
-site_state: コミュニティの運行状態
-site_since: コミュニティの成立時間
-site_post_count: テーマの数
-site_comment_count: 回答数
-site_user_count: 登録ユーザーの数
-site_copyright: '@2024 Vmoex -知識と興味の集まる場所'
-site_title: Vmoex -知識と興味の集まる場所
+site_state: コミュニティの運営状態
+site_since: コミュニティ設立日
+site_post_count: トピック数
+site_comment_count: 返信数
+site_user_count: 登録ユーザー数
+site_copyright: "@2024 Vmoex - 知識と興味の集まる場所"
+site_title: 'Vmoex - 知識と興味の集まる場所'
 site_name: Vmoex
-user_place_in_site: Cunt位Wpcrftユーザー
-footer_available_with: 使用可能：
-user_my_messages: 私の私信
-user_my_received_messages: 私が受け取った
-user_my_sent_messages: 私が出したのは
-sorry_no_content: 申し訳ありませんが、何の内容もありません。
-user_you_send_message_to: あなたはレコードに対して
-user_send_message_to_you: あなたに言いました。
+user_place_in_site: Vmoexの第count位のユーザー
+footer_available_with: '使用可能: '
+user_my_messages: マイメッセージ
+user_my_received_messages: 受信メッセージ
+user_my_sent_messages: 送信メッセージ
+sorry_no_content: 申し訳ありませんが、現在コンテンツがありません！
+user_you_send_message_to: あなたがreceiverに送信したメッセージ：
+user_send_message_to_you: receiverがあなたに送信したメッセージ：
 Title: タイトル
-Cover: 表紙
+Cover: カバー
 Detail: 詳細
 latest_blogs: 最新作成
 nav_create_blog: ブログを作成
-nav_create_post: 新しいテーマを作成
+nav_create_post: 新しいトピックを作成
 'Old password': 古いパスワード
 'New Password': 新しいパスワード
-'Repeat Password': パスワードを繰り返す
-home_now_register: すぐに登録します！
-user_my_posts: 私の招待状
-user_my_comments: 私のコメント
-user_my_following: 私の関心
-user_my_follower: 私のことに気をつけて
-user_my_blog: 私が作ったブログ
-email: 郵便ポスト
-user_setting_email_verified: メールアドレスの検証
+'Repeat Password': パスワードを再入力
+home_now_register: 今すぐ登録！
+user_my_posts: マイ投稿
+user_my_comments: マイコメント
+user_my_following: フォロー中
+user_my_follower: フォロワー
+user_my_blog: マイブログ
+email: メールアドレス
+user_setting_email_verified: メールアドレスが認証されました
 community: コミュニティ
-notice_comment_mention_you: コメントで述べている
+notice_comment_mention_you: コメントであなたに言及しました
 post_add_comment_hint: できるだけ意味のあるコメントを追加してください。
-users.gold_rank: ユーザーの金貨ランキング
-users.rank: 順位
+users.gold_rank: ユーザーゴールドランキング
+users.rank: ランク
 username: ユーザー名
-gold: 金貨
-users.sign_rank: ユーザーがランキングにサインする
-global.sign: 署名する
-post_not_exist: 文章は存在しない
-length_not_support: 内の何か…長さが合わないみたいですよ！
-do_not_repeat_mention_others: 他の人を繰り返してはいけません！
-no_enough_gold: 金貨が足りない
-comment_not_exist: コメントは存在しません
-cant_modify_current_user_in_admin: null
+gold: ゴールド
+users.sign_rank: ユーザーサインインランキング
+global.sign: サインイン
+post_not_exist: 記事が存在しません
+length_not_support: あの…長さが合ってないようです！
+do_not_repeat_mention_others: 他の人に重複して@しないでください！
+no_enough_gold: ゴールドが不足しています
+comment_not_exist: コメントが存在しません
+cant_modify_current_user_in_admin: 管理画面で現在のユーザー情報を変更できません。ユーザー画面のマイページで変更してください
+user_not_exist: ユーザーが存在しません
+locale_invalid: 無効な言語
 hours: 時間
-access_denied: 访问被拒绝
-'locale invalid': null
-历史公告: 履歴のお知らせ
+access_denied: アクセスが拒否されました
+'locale invalid': 不明な言語
+历史公告: 過去のお知らせ
 服务条款: 利用規約
 支持: サポート
-关于Vmoex : Vmoexについて
-member_oneline_count : オンラインのメンバー
-visitor : 訪問者
-person : 人
-其他 : その他
-电影 : 映画
-番剧 : アニメシリーズ
-灌水 : 雑談
-更多 : もっと or さらに
-最新发布 : 最新の投稿
-最新评论 : 最新のコメント
+关于Vmoex: Vmoexについて
+member_oneline_count: メンバーオンライン
+visitor: 訪問者
+person: 人
+最新发布: 最新公開
+最新评论: 最新コメント
+更多: もっと見る
+使用条款: 利用規約
+第三方登录: サードパーティーログイン
+已有帐号？: 既にアカウントをお持ちですか？
+直接登录: 直接ログイン
+立即注册: 今すぐ登録
+记住登录状态: ログイン状態を記憶する
+推荐主题: おすすめのトピック
+日常: 日常
+闲聊灌水: 雑談
+职场吐槽: 仕事の愚痴
+好玩: 面白い
+分享发现: 発見をシェア
+发起活动: イベントを開始
+奇思妙想: 奇想天外
+问答: Q&A
+问题求助: 問題のヘルプ
+技术: 技術
+编程: プログラミング
+分享创造: 創作をシェア
+交易: 取引
+二手交易: 中古取引
+免费赠送: 無料贈呈
