--- a/app/Resources/translations/messages.en.yml
+++ b/app/Resources/translations/messages.en.yml
@@ -183,6 +183,18 @@ person: Person
 立即注册: Register now
 记住登录状态: Remember login status
 推荐主题: Recommended Topics
+暂时没有任何文档！: No documents available at the moment!
+签到领取奖励: Check in to receive rewards
+验证码: Verification code
+验证: Verification
+发送验证码: Send verification code
+基本资料: Basic information
+用户名不能被修改: Username cannot be changed
+天后可修改昵称。: Nickname can be changed after day.
+昵称每180天可修改一次，请谨慎修改。: Nickname can be changed once every 180 days. Please make changes carefully.
+支持 2MB 以内的jpg、png、gif格式，推荐使用一张 200*200 的 PNG 文件以获得最佳效果，gif格式需消耗50金币: Supports jpg, png, and gif formats up to 2MB. It is recommended to use a 200*200 PNG file for the best effect. Gif format requires 50 coins.
+我的信箱: My mailbox
+更新: Update
 日常: Daily
 闲聊灌水: Casual Chat
 职场吐槽: Workplace Rants
