--- a/app/Resources/translations/messages.jp.yml
+++ b/app/Resources/translations/messages.jp.yml
@@ -183,6 +183,18 @@ person: 人
 立即注册: 今すぐ登録
 记住登录状态: ログイン状態を記憶する
 推荐主题: おすすめのトピック
+暂时没有任何文档！: 現在、ドキュメントはありません！
+签到领取奖励: 出席して報酬を受け取る
+验证码: 認証コード
+验证: 検証
+发送验证码: 認証コードを送信する
+基本资料: 基本情報
+用户名不能被修改: ユーザー名は変更できません
+天后可修改昵称。: 天後にニックネームを変更できます。
+昵称每180天可修改一次，请谨慎修改。: ニックネームは180日に1回変更できます。慎重に変更してください。
+支持 2MB 以内的jpg、png、gif格式，推荐使用一张 200*200 的 PNG 文件以获得最佳效果，gif格式需消耗50金币: 2MB以内のjpg、png、gif形式がサポートされています。最適な効果を得るには200*200のPNGファイルを使用することをお勧めします。gif形式は50コインが必要です。
+我的信箱: 私のメールボックス
+更新: 更新
 日常: 日常
 闲聊灌水: 雑談
 职场吐槽: 仕事の愚痴
