--- a/app/Resources/translations/messages.zh_CN.yml
+++ b/app/Resources/translations/messages.zh_CN.yml
@@ -183,6 +183,18 @@ person: 人
 立即注册: 立即注册
 记住登录状态: 记住登录状态
 推荐主题: 推荐主题
+暂时没有任何文档！: 暂时没有任何文档！
+签到领取奖励: 签到领取奖励
+验证码: 验证码
+验证: 验证
+发送验证码: 发送验证码
+基本资料: 基本资料
+用户名不能被修改: 用户名不能被修改
+昵称每180天可修改一次，请谨慎修改。: 昵称每180天可修改一次，请谨慎修改。
+天后可修改昵称。: 天后可修改昵称。
+支持 2MB 以内的jpg、png、gif格式，推荐使用一张 200*200 的 PNG 文件以获得最佳效果，gif格式需消耗50金币: 支持 2MB 以内的jpg、png、gif格式，推荐使用一张 200*200 的 PNG 文件以获得最佳效果，gif格式需消耗50金币
+我的信箱: 我的信箱
+更新: 更新
 日常: 日常
 闲聊灌水:  闲聊灌水
 职场吐槽: 职场吐槽
