--- a/app/Resources/translations/messages.zh_TW.yml
+++ b/app/Resources/translations/messages.zh_TW.yml
@@ -183,6 +183,18 @@ person: 人
 立即注册: 立即註冊
 记住登录状态: 記住登入狀態
 推荐主题: 推薦主題
+暂时没有任何文档！: 暫時沒有任何文檔！
+签到领取奖励: 簽到領取獎勳
+验证码: 驗證碼
+验证: 驗證
+发送验证码: 發送驗證碼
+基本资料: 基本資料
+用户名不能被修改: 用戶名不能被修改
+天后可修改昵称。: 天後可修改暱稱。
+昵称每180天可修改一次，请谨慎修改。: 昵称每180天可修改一次，請謹慎修改。
+支持 2MB 以内的jpg、png、gif格式，推荐使用一张 200*200 的 PNG 文件以获得最佳效果，gif格式需消耗50金币: 支援 2MB 以內的jpg、png、gif格式，推薦使用一張 200*200 的 PNG 文件以獲得最佳效果，gif格式需消耗50金幣
+我的信箱: 我的信箱
+更新: 更新
 日常: 日常
 闲聊灌水: 閒聊灌水
 职场吐槽: 職場吐槽
