--- a/app/Resources/translations/messages.en.yml
+++ b/app/Resources/translations/messages.en.yml
@@ -195,6 +195,7 @@ person: Person
 支持 2MB 以内的jpg、png、gif格式，推荐使用一张 200*200 的 PNG 文件以获得最佳效果，gif格式需消耗50金币: Supports jpg, png, and gif formats up to 2MB. It is recommended to use a 200*200 PNG file for the best effect. Gif format requires 50 coins.
 我的信箱: My mailbox
 更新: Update
+管理员: Administrator
 日常: Daily
 闲聊灌水: Casual Chat
 职场吐槽: Workplace Rants
