--- a/app/Resources/translations/messages.zh_CN.yml
+++ b/app/Resources/translations/messages.zh_CN.yml
@@ -195,6 +195,7 @@ person: 人
 支持 2MB 以内的jpg、png、gif格式，推荐使用一张 200*200 的 PNG 文件以获得最佳效果，gif格式需消耗50金币: 支持 2MB 以内的jpg、png、gif格式，推荐使用一张 200*200 的 PNG 文件以获得最佳效果，gif格式需消耗50金币
 我的信箱: 我的信箱
 更新: 更新
+管理员: 管理员
 日常: 日常
 闲聊灌水:  闲聊灌水
 职场吐槽: 职场吐槽
