--- a/app/Resources/translations/messages.zh_TW.yml
+++ b/app/Resources/translations/messages.zh_TW.yml
@@ -77,8 +77,8 @@ support: 支持
 支持我们: 支持我們
 个新的粉丝: 個新的粉絲
 赞: 贊
-什么是瞎聊: 什麼是瞎聊
-blind_description: “瞎聊”是 Vmoex 社區提供的一個線上即時聊天功能，每發送一條“瞎聊”消息將消耗一枚金幣。
+什么是瞎聊: 什麼是聊聊
+blind_description: “聊聊”是 Vmoex 社區提供的一個線上即時聊天功能，每發送一條“聊聊”消息將消耗一枚金幣。
 社区运行状态: 社區運行狀態
 社区成立时间: 社區成立時間
 主题数量: 主題數量
@@ -195,6 +195,7 @@ person: 人
 支持 2MB 以内的jpg、png、gif格式，推荐使用一张 200*200 的 PNG 文件以获得最佳效果，gif格式需消耗50金币: 支援 2MB 以內的jpg、png、gif格式，推薦使用一張 200*200 的 PNG 文件以獲得最佳效果，gif格式需消耗50金幣
 我的信箱: 我的信箱
 更新: 更新
+管理员: 管理員
 日常: 日常
 闲聊灌水: 閒聊灌水
 职场吐槽: 職場吐槽
