--- a/app/Resources/translations/messages.jp.yml
+++ b/app/Resources/translations/messages.jp.yml
@@ -195,6 +195,7 @@ person: 人
 支持 2MB 以内的jpg、png、gif格式，推荐使用一张 200*200 的 PNG 文件以获得最佳效果，gif格式需消耗50金币: 2MB以内のjpg、png、gif形式がサポートされています。最適な効果を得るには200*200のPNGファイルを使用することをお勧めします。gif形式は50コインが必要です。
 我的信箱: 私のメールボックス
 更新: 更新
+管理员: かんりしゃ
 日常: 日常
 闲聊灌水: 雑談
 职场吐槽: 仕事の愚痴
