--- a/app/Resources/translations/messages.en.yml
+++ b/app/Resources/translations/messages.en.yml
@@ -196,6 +196,9 @@ person: Person
 我的信箱: My mailbox
 更新: Update
 管理员: Administrator
+内容: Content
+选择板块: Select Board
+提交: Submit
 日常: Daily
 闲聊灌水: Casual Chat
 职场吐槽: Workplace Rants
