--- a/app/Resources/translations/messages.jp.yml
+++ b/app/Resources/translations/messages.jp.yml
@@ -64,7 +64,7 @@ support: サポート
 查看所有私信: すべてのメッセージを表示
 个人设置: 個人設定
 添加新的评论: 新しいコメントを追加
-发表有颜色的评论: カラフルなコメントを投稿するには1ゴールドを消費します
+发表评论: コメントを投稿すると1ゴールドが消費されますよ。
 好可怕，速度太快了: 速すぎて怖い！
 关于作者: 著者について
 拉黑: ブロック
@@ -77,8 +77,8 @@ support: サポート
 支持我们: サポート
 个新的粉丝: 新しいフォロワー
 赞: いいね
-什么是瞎聊: 雑談
-blind_description: 「雑談」はVmoexコミュニティが提供するリアルタイムチャット機能で、メッセージを送信するたびに1ゴールドを消費します。
+什么是瞎聊: チャット
+blind_description: 「チャット」はVmoexコミュニティが提供するリアルタイムチャット機能で、メッセージを送信するたびに1ゴールドを消費します。
 社区运行状态: コミュニティの運営状態
 社区成立时间: コミュニティ設立日
 主题数量: トピック数
@@ -199,6 +199,11 @@ person: 人
 内容: 内容
 选择板块: 板を選択
 提交: 提出
+我的收藏: マイコレクション (私のコレクション)
+我的感谢: 私の感謝
+主题: トピック
+我收到的: 受け取った
+我送出的: 送った
 日常: 日常
 闲聊灌水: 雑談
 职场吐槽: 仕事の愚痴
