--- a/app/Resources/translations/messages.zh_TW.yml
+++ b/app/Resources/translations/messages.zh_TW.yml
@@ -64,7 +64,7 @@ support: 支持
 查看所有私信: 查看所有私信
 个人设置: 個人設置
 添加新的评论: 添加新的評論
-发表有颜色的评论: 發表有顏色的評論將消耗1金幣哦
+发表评论: 發表評論將消耗1金幣哦。
 好可怕，速度太快了: 好可怕，速度太快了
 关于作者: 關於作者
 拉黑: 拉黑
@@ -199,6 +199,11 @@ person: 人
 内容: 內容
 选择板块: 選擇板塊
 提交: 提交
+我的收藏: 我的收藏
+我的感谢: 我的感謝
+主题: 主題
+我收到的: 我收到的
+我送出的: 我送出的
 日常: 日常
 闲聊灌水: 閒聊灌水
 职场吐槽: 職場吐槽
