--- a/app/Resources/translations/messages.zh_CN.yml
+++ b/app/Resources/translations/messages.zh_CN.yml
@@ -64,7 +64,7 @@ support: 支持
 查看所有私信: 查看所有私信
 个人设置: 个人设置
 添加新的评论: 添加新的评论
-发表有颜色的评论: 发表有颜色的评论将消耗1金币哦
+发表评论: 发表评论将消耗1金币哦
 好可怕，速度太快了: 好可怕，速度太快了
 关于作者: 关于作者
 拉黑: 拉黑
@@ -199,6 +199,12 @@ person: 人
 内容: 内容
 选择板块: 选择板块
 提交: 提交
+我的收藏: 我的收藏
+我的感谢: 我的感谢
+主题: 主题
+我收到的: 我收到的
+我送出的: 我送出的
+日常: 日常
 闲聊灌水:  闲聊灌水
 职场吐槽: 职场吐槽
 好玩: 好玩
