--- a/app/Resources/translations/messages.en.yml
+++ b/app/Resources/translations/messages.en.yml
@@ -204,6 +204,16 @@ person: Person
 主题: Topics
 我收到的: Received
 我送出的: Sent
+加入收藏: Add to Favorites
+取消收藏: Remove from Favorites
+感谢: Thanks
+分享: Share
+屏蔽: Block
+已发送感谢: Thanks sent
+次收藏: Times favorited
+次感谢: Times thanked
+请注意言论,主题创建后不允许删除或修改: Please be mindful of your comments. Once a topic is created, it cannot be deleted or modified.
+图片上传大小: The maximum allowed size for the image is 2MB
 日常: Daily
 闲聊灌水: Casual Chat
 职场吐槽: Workplace Rants
