--- a/app/Resources/translations/messages.jp.yml
+++ b/app/Resources/translations/messages.jp.yml
@@ -204,6 +204,16 @@ person: 人
 主题: トピック
 我收到的: 受け取った
 我送出的: 送った
+加入收藏: お気に入りに追加
+取消收藏: お気に入りから削除
+感谢: 感謝
+分享: シェア
+屏蔽: ブロック
+已发送感谢: 送信済みの感謝
+次收藏: 回のお気に入り
+次感谢: 回の感謝
+请注意言论,主题创建后不允许删除或修改: コメントにはご注意ください。トピックが作成された後は、削除や変更ができません。
+图片上传大小: 最大サイズは2MBまでです。
 日常: 日常
 闲聊灌水: 雑談
 职场吐槽: 仕事の愚痴
