--- a/app/Resources/translations/messages.zh_CN.yml
+++ b/app/Resources/translations/messages.zh_CN.yml
@@ -204,6 +204,16 @@ person: 人
 主题: 主题
 我收到的: 我收到的
 我送出的: 我送出的
+加入收藏: 加入收藏
+取消收藏: 取消收藏
+感谢: 感谢
+分享: 分享
+屏蔽: 屏蔽
+已发送感谢: 已发送感谢
+次收藏: 次收藏
+次感谢: 次感谢
+请注意言论,主题创建后不允许删除或修改: 请注意言论,主题创建后不允许删除或修改
+图片上传大小: 图片大小最大只能2M
 日常: 日常
 闲聊灌水:  闲聊灌水
 职场吐槽: 职场吐槽
