--- a/app/Resources/translations/messages.zh_TW.yml
+++ b/app/Resources/translations/messages.zh_TW.yml
@@ -204,6 +204,16 @@ person: 人
 主题: 主題
 我收到的: 我收到的
 我送出的: 我送出的
+加入收藏: 加入收藏
+取消收藏: 取消收藏
+感谢: 感謝
+分享: 分享
+屏蔽: 隱藏
+已发送感谢: 已發送感謝
+次收藏: 次收藏
+次感谢: 次感謝
+请注意言论,主题创建后不允许删除或修改: 請注意言論，主題創建後不允許刪除或修改。
+图片上传大小: 圖片大小最大只能2MB。
 日常: 日常
 闲聊灌水: 閒聊灌水
 职场吐槽: 職場吐槽
