--- a/app/Resources/translations/messages.en.yml
+++ b/app/Resources/translations/messages.en.yml
@@ -214,6 +214,7 @@ person: Person
 次感谢: Times thanked
 请注意言论,主题创建后不允许删除或修改: Please be mindful of your comments. Once a topic is created, it cannot be deleted or modified.
 图片上传大小: The maximum allowed size for the image is 2MB
+已被拉黑: Your account has been blocked and you cannot log in.
 日常: Daily
 闲聊灌水: Casual Chat
 职场吐槽: Workplace Rants
