--- a/app/Resources/translations/messages.zh_CN.yml
+++ b/app/Resources/translations/messages.zh_CN.yml
@@ -214,6 +214,7 @@ person: 人
 次感谢: 次感谢
 请注意言论,主题创建后不允许删除或修改: 请注意言论,主题创建后不允许删除或修改
 图片上传大小: 图片大小最大只能2M
+已被拉黑: 您的账号已被拉黑，无法登录
 日常: 日常
 闲聊灌水:  闲聊灌水
 职场吐槽: 职场吐槽
