--- a/app/Resources/translations/messages.jp.yml
+++ b/app/Resources/translations/messages.jp.yml
@@ -214,6 +214,7 @@ person: 人
 次感谢: 回の感謝
 请注意言论,主题创建后不允许删除或修改: コメントにはご注意ください。トピックが作成された後は、削除や変更ができません。
 图片上传大小: 最大サイズは2MBまでです。
+已被拉黑: あなたのアカウントはブロックされており、ログインできません。
 日常: 日常
 闲聊灌水: 雑談
 职场吐槽: 仕事の愚痴
