--- a/app/Resources/translations/messages.zh_TW.yml
+++ b/app/Resources/translations/messages.zh_TW.yml
@@ -214,6 +214,7 @@ person: 人
 次感谢: 次感謝
 请注意言论,主题创建后不允许删除或修改: 請注意言論，主題創建後不允許刪除或修改。
 图片上传大小: 圖片大小最大只能2MB。
+已被拉黑: 您的帳號已被拉黑，無法登入
 日常: 日常
 闲聊灌水: 閒聊灌水
 职场吐槽: 職場吐槽
